--- a/.github/workflows/Official OpenWrt.yml
+++ b/.github/workflows/Official OpenWrt.yml
@@ -11,8 +11,8 @@ name: Official OpenWrt
 on:
   repository_dispatch:
   workflow_dispatch:
-  schedule:
-    - cron: 0 4 * * *
+  #schedule:
+  #  - cron: 0 4 * * *
   # watch:
   #   types: started
 
