--- a/.github/workflows/Official OpenWrt.yml
+++ b/.github/workflows/Official OpenWrt.yml
@@ -31,7 +31,7 @@ env:
 jobs:
   Build:
     runs-on: ubuntu-18.04
-    if: github.repository == 'LewiVir/NanoPi-R4S'
+    if: github.repository == 'immatt2015/NanoPi-R4S'
     outputs:
       OPENWRTROOT: ${{ steps.update.outputs.OPENWRTROOT }}
       PLATFORM: ${{ steps.compile.outputs.PLATFORM }}
